Fix product grid spacing
Fixes DD 71427-21

--- a/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
@@ -431,27 +431,27 @@ $home-sidebar-width: 20.5%;
     }
 
     .bluefoot-driver {
-        max-width: 140px;
         margin: 0 auto !important; // override drivers
 
         @include min-screen($screen__l) {
             max-width: none;
-            padding-left: 15% !important; // override drivers
-            padding-right: 15% !important; // override drivers
-        }
-
-        @include min-screen($screen__xl) {
-            padding-left: 25% !important; // override drivers
-            padding-right: 25% !important; // override drivers
         }
 
         a {
+            padding-top: 120px !important; //override driver
             padding-bottom: 35px;
             background-color: transparent;
         }
 
         img {
             width: 100%;
+            max-width: 100px;
+            left: 50% !important; //override driver
+            transform: translateX(-50%);
+
+            @include min-screen($screen__s) {
+                max-width: 125px;
+            }
         }
 
         &-text {
@@ -463,7 +463,7 @@ $home-sidebar-width: 20.5%;
             background-color: transparent !important; //override Bluefoot driver
 
             @include max-screen($screen__m) {
-                bottom: -15px;
+                bottom: 0;
                 font-size: $font-size__base--desktop;
                 line-height: 1.14;
             }
